# revrag-voice-agent

./: .env.example  .gitignore  README.md  requirements.txt
app/: api.py  config.py  generate_token.py  main.py  stt_service.py  tts_service.py
backend/: .env.example  agent.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/components/: Transcript.tsx  VoiceAgent.tsx
